--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,30 @@
 .navcolor {
-    background-color: rgb(0, 255, 221);
+  background-color: rgb(0, 255, 221);
 }
 
 .Einstein {
-    font-family: 'Times New Roman', Times, serif;
-    font-style: italic;
-    font-size: larger;
-    padding: 20px 30px 20px 30px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-size: larger;
+  padding: 20px 30px 20px 30px;
 }
 
 .projects {
-    color: aqua;
-    padding: 0px 15px;
+  color: aqua;
+  padding: 0px 15px;
+}
+
+.box {
+  background-color: lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 400px;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
+  transform: translateX(400%);
+  transition: transform 0.4s ease;
 }
